--- a/front/homePage/style.css
+++ b/front/homePage/style.css
@@ -297,12 +297,16 @@
             flex-direction: column;
             padding: 37px 29px;
             background-color: #FAFAF9;
-            max-width: 270px;
+            max-width: 344px;
             border-radius: 70px;
             .imagge{
                 padding-bottom: 24px;
+                min-height: 286px;
                 img{
+                    min-height: 286px;
+                    height: max-content;
                     border-radius: 100%;
+                    object-fit: cover;
                 }
             }
             .title{
