--- a/front/menu/style.css
+++ b/front/menu/style.css
@@ -29,6 +29,10 @@
 }
 
 
+.container{
+    align-items: center;
+}
+
 .item{
     display: flex;
     align-items: center;
@@ -87,3 +91,132 @@
     }
 }
 
+.next{
+    justify-content: center;
+    padding-top: 88px;
+    display: flex;
+    gap: 30px;
+    .itemPrev,
+    .itemNext{
+        background-color: #311F09;
+        min-width: 55px;
+        min-height: 55px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 15px;
+        transition: all .4s ease;
+        &:hover{
+            box-shadow: 0px 0px 15px #311F09;
+            cursor: pointer;
+            transition: all .4s ease;
+        }
+    }
+    .numbers{
+        font-family: "Poppins-SemiBold";
+        background-color: #FFF3E6;
+        min-width: 55px;
+        min-height: 55px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 15px;
+        color: #FF8A00;
+        transition: all .4s ease;
+        &:hover{
+            box-shadow: 0px 0px 15px #FF8A00;
+            cursor: pointer;
+            transition: all .4s ease;
+        }
+    }
+    .tRy{
+        min-width: 55px;
+        min-height: 55px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+    }
+    padding-bottom: 211px;
+}   
+
+.menuCatalog{
+    padding-top: 60px;
+    display: flex;
+    gap: 40px;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 1125px;
+    flex-direction: row;
+    .item{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        padding: 37px 29px;
+        background-color: #FAFAF9;
+        max-width: 344px;
+        border-radius: 70px;
+        transition: all .4s ease;
+        &.activeCard{
+            background-color: #FF8A00;
+        }
+        &:hover{
+            box-shadow: 0px 0px 15px #FF8A00;
+            cursor: pointer;
+            transition: all .4s ease;
+        }
+        .imagge{
+            padding-bottom: 24px;
+            min-height: 286px;
+            img{
+                min-height: 286px;
+                height: max-content;
+                border-radius: 100%;
+                object-fit: cover;
+            }
+        }
+        .title{
+            padding-top: 0;
+            color: #311F09;
+            font-size: 1.875rem;
+            font-family: "Tinos-Bold";
+            padding-bottom: 10px;
+        }
+        .stars{
+            display: flex;
+            gap: 10px;
+            padding-bottom: 15px;
+        }
+        .desc{
+            font-family: "Poppins-Regular";
+            color: #59442B;
+            font-size: 0.875rem;
+            text-align: center;
+            width: 109%;
+            padding-bottom: 30px;
+        }
+        .priceOrder{
+            display: flex;
+            align-items: center;
+            gap: 34px;
+            .price{
+                font-family: "Poppins-SemiBold";
+                font-size: 1.5625rem;
+                color: #311F09;
+            }
+            .btnOrder{
+                font-family: "Poppins-SemiBold";
+                font-size: 1rem;
+                padding: 14px 36px;
+                color: #fff;
+                background-color: #FF8A00;
+                border-radius: 162px;
+                &:hover{
+                    box-shadow: 0px 0px 15px #FF8A00;
+                    cursor: pointer;
+                    transition: all .4s ease;
+                }
+            }
+        }
+    }
+}
