--- a/front/menu/style.css
+++ b/front/menu/style.css
@@ -30,7 +30,11 @@
 
 
 .container{
-    align-items: center;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: row !important;
+    display: flex;
+    gap: 46px;
 }
 
 .item{
@@ -141,7 +145,7 @@
 }   
 
 .menuCatalog{
-    padding-top: 60px;
+    padding-top: 116px;
     display: flex;
     gap: 40px;
     flex-wrap: wrap;
@@ -152,10 +156,11 @@
         display: flex;
         align-items: center;
         flex-direction: column;
-        padding: 37px 29px;
+        flex-basis: 30%;
+        padding: 16px 20px;
         background-color: #FAFAF9;
-        max-width: 344px;
-        border-radius: 70px;
+        max-width: 220px;
+        border-radius: 35px;
         transition: all .4s ease;
         &.activeCard{
             background-color: #FF8A00;
@@ -167,9 +172,9 @@
         }
         .imagge{
             padding-bottom: 24px;
-            min-height: 286px;
+            min-height: 184px;
             img{
-                min-height: 286px;
+                min-height: 183px;
                 height: max-content;
                 border-radius: 100%;
                 object-fit: cover;
@@ -178,19 +183,22 @@
         .title{
             padding-top: 0;
             color: #311F09;
-            font-size: 1.875rem;
+            font-size: 1.25rem;
             font-family: "Tinos-Bold";
             padding-bottom: 10px;
         }
         .stars{
             display: flex;
-            gap: 10px;
+            gap: 6px;
             padding-bottom: 15px;
+            img{
+                width: 15px;
+            }
         }
         .desc{
             font-family: "Poppins-Regular";
             color: #59442B;
-            font-size: 0.875rem;
+            font-size: 0.75rem;
             text-align: center;
             width: 109%;
             padding-bottom: 30px;
@@ -198,16 +206,16 @@
         .priceOrder{
             display: flex;
             align-items: center;
-            gap: 34px;
+            gap: 15px;
             .price{
                 font-family: "Poppins-SemiBold";
-                font-size: 1.5625rem;
+                font-size: 1.125rem;
                 color: #311F09;
             }
             .btnOrder{
                 font-family: "Poppins-SemiBold";
-                font-size: 1rem;
-                padding: 14px 36px;
+                font-size: 0.75rem;
+                padding: 9px 19px;
                 color: #fff;
                 background-color: #FF8A00;
                 border-radius: 162px;
@@ -218,5 +226,27 @@
                 }
             }
         }
+    }
+}
+
+
+.orderList{
+    display: flex;
+    flex-direction: column;
+    max-width: 343px;
+    background-color: #fff;
+    box-shadow: 0px 0px 15px #D0CCC7;
+    border-radius: 28px;
+    margin-top: 116px;
+    padding: 20px;
+
+    .orderBtnList{
+        background-color: #512982;
+        border-radius: 20px;
+        padding: 27px 82px;
+        font-family: "Poppins-SemiBold";
+        color: #fff;
+        font-size: 1.875rem;
+        text-wrap: nowrap;
     }
 }
