--- a/front/menu/style.css
+++ b/front/menu/style.css
@@ -62,11 +62,30 @@
         font-family: "Tinos-Bold";
         padding-bottom: 10px;
     }
-    .stars{
+    .stars {
         display: flex;
         gap: 10px;
+        color: #cacaca;
+        font-size: 1.25rem;
         padding-bottom: 15px;
-    }
+      }
+      
+      .star {
+        fill: #ffe8ce; 
+        transition: fill 0.3s;
+      }
+      
+      .star.active {
+        fill: white; 
+      }
+      
+      .star.highlighted {
+        fill: #FF8A00; 
+      }
+      
+      .star.activeClick {
+        fill: black; 
+      }
     .desc{
         font-family: "Poppins-Regular";
         color: #59442B;
