--- a/front/reservation/style.css
+++ b/front/reservation/style.css
@@ -316,9 +316,11 @@
 }
 
 .activeAbove{
-    background-image: url(../img/svg/activeCheckbox.svg);
-    position: absolute;
+    background-image: url(../img/svg/Ellipse\ 85.svg);
     background-repeat: no-repeat;
+    background-position: center;
+    background-size: 31px;
+    transition: all .4s ease;
 
 }
 .agreements{
@@ -335,7 +337,6 @@
             display: flex;
             align-items: center;
             gap: 20px;
-            position: relative;
             
             input {
                 outline: none;
@@ -350,6 +351,8 @@
                 .newsAbove,
                 .newsRes{
                     position: relative;
+                    transition: all .4s ease;
+
                 }
             }
             span{
@@ -569,10 +572,16 @@
                     padding: 29px 60px;
                     background-color: #CCE3FF;
                     border-radius: 20px;
+                    transition: all .4s ease;
                     span{
                         color: #123968;
                         font-size: 1.25rem;
                         font-family: "Poppins-Regular";
+                    }
+                    &:hover{
+                        box-shadow: 0px 0px 15px #69adff;
+                        cursor: pointer;
+                        transition: all .4s ease;
                     }
                 }
                 .close{
@@ -582,10 +591,16 @@
                     padding: 29px 60px;
                     background-color: #FFE6E6;
                     border-radius: 20px;
+                    transition: all .4s ease;
                     span{
                         color: #EA1010;
                         font-size: 1.25rem;
                         font-family: "Poppins-Regular";
+                    }
+                    &:hover{
+                        box-shadow: 0px 0px 15px #ff7777;
+                        cursor: pointer;
+                        transition: all .4s ease;
                     }
                 }
             }
@@ -600,47 +615,28 @@
                 gap: 37px;
                 flex-direction: column;
                 width: 50%;   
-                .arrowInput{
+                .accasion{
                     position: relative;
-                    input{
-                        padding: 39px 50px;
-                        border-radius: 20px;
-                        background-color: #FBFAFA;
-                        height: unset;
-                        &::placeholder{
-                            color: #A0978C;
-                            font-size: 1.25rem;
-                            font-family: "Poppins-Regular";
-                        }
-                        
-                    }
-                    &::after{
-                        content: " ";
-                        background-image: url(../img/svg/arrowCountry.svg);
-                        position: absolute;
-                        top: 50%;
-                        right: 34px;
-                        z-index: 3;
-                        background-repeat: no-repeat;
-                        height: 14px;
-                        width: 23px;
-                        transform: translateY(-50%);
+                    padding: 39px 50px;
+                    border-radius: 20px;
+                    background-color: #FBFAFA;
+                    height: unset;
+                    span{
+                        color: #A0978C;
+                        font-size: 1.25rem;
+                        font-family: "Poppins-Regular";
                     }
                 }
-                label{
+                .specialRequest{
                     padding: 39px 50px;
                     height: 359px;
                     border-radius: 20px;
                     background-color: #FBFAFA;
                     color: #A0978C;
-                    input{
-                        background-color: transparent;
-                        outline: none;
-                        &::placeholder{
-                            color: #A0978C;
-                            font-size: 1.25rem;
-                            font-family: "Poppins-Regular";
-                        }
+                    span{
+                        color: #A0978C;
+                        font-size: 1.25rem;
+                        font-family: "Poppins-Regular";
                     }
                 }                  
             }
@@ -662,6 +658,235 @@
                    &:nth-child(1){
                     padding-bottom: 20px;
                    }
+                }
+            }
+        }
+    }
+}
+
+.modalClose{
+    display: none;
+    &::after{
+        content: " ";
+        background-color: #311F09;
+        opacity: 80%;
+        position: absolute;
+        width: 200%;
+        height: 200%;
+        top: 0;
+        bottom: 0;
+        left: -470px;
+        z-index: 1;
+    }
+    .groupClose{
+        max-width: 1112px;
+        background-color: #FFFFFF;
+        position: absolute;
+        top: -46%;
+        left: 50%;
+        transform: translate(-50%, 50%);
+        z-index: 2;
+        padding: 60px 0;
+        width: 100%;
+        .closedClose{
+            min-width: 80px;
+            min-height: 80px;
+            background-color: #fff;
+            display: flex;
+            left: 50%;
+            align-items: center;
+            transform: translateX(-50%);
+            justify-content: center;
+            position: absolute;
+            top: -110px;
+            border-radius: 50px;
+            transition: all .4s ease;
+            svg{
+                path{
+                    stroke: #000;
+                }
+            }
+            &:hover{
+                box-shadow: 0px 0px 15px #fff;
+                transition: all .4s ease;
+                cursor: pointer;
+                svg{
+                    path{
+                        stroke: #ff0000;
+                    }
+                }
+            }
+        }
+        .head{
+            display: flex;
+            justify-content: space-between;
+            padding: 0 60px;
+            .groupBtn{
+                display: flex;
+                gap: 15px;
+                .span:nth-child(1){
+                    padding: 14px 32px;
+                    background-color: #FF8A00;
+                    border-radius: 133px;
+                    color: #fff;
+                    font-family: 'Poppins-SemiBold';
+                    font-size: 0.875rem;
+                    transition: all .4s ease;
+                    &:hover{
+                        box-shadow: 0px 0px 15px #FF8A00;
+                        cursor: pointer;
+                        transition: all .4s ease;
+                    }
+                }
+                .span:nth-child(2){
+                    padding: 14px 32px;
+                    background-color: #3FA72F;
+                    border-radius: 133px;
+                    color: #fff;
+                    font-family: 'Poppins-SemiBold';
+                    font-size: 0.875rem;
+                    transition: all .4s ease;
+                    &:hover{
+                        box-shadow: 0px 0px 15px #3FA72F;
+                        cursor: pointer;
+                        transition: all .4s ease;
+                    }
+                }
+            }
+        }
+        .detail{
+            display: flex;
+            flex-direction: column;
+            padding-top: 94px;
+            position: relative;
+            .imagge{
+                position: absolute;
+                max-width: 1112px;
+                padding-top: 15px;
+                z-index: -1;
+                top: 80px;
+                img{
+                    width: 100%;
+                }
+            }
+
+            .title{
+                font-size: 2.5rem;
+                font-family: 'Poppins-SemiBold';
+                color: #ffffff;
+                padding: 34px 60px 0px 60px;
+            }
+            .groupDetail{
+                padding: 28px 60px 34px 60px;
+                display: flex;
+                flex-direction: column;
+                gap: 12px;
+                .item{
+                    display: flex;
+                    align-items: center;
+                    gap: 16px;
+                    span{
+                        color: #ffffff;
+                        font-size: 1.25rem;
+                        font-family: "Poppins-Regular";
+                    }
+                }
+            }
+        }
+        .detailRrsv{
+            display: flex;
+            padding: 107px 60px 60px 0px;
+            align-items: center;
+            gap: 34px;
+            .imgg{
+                max-width: 330px;
+                padding-right: 34px;
+                img{
+                    width: 100%;
+                }
+            }
+            .gruoudesc{
+                display: flex;
+                flex-direction: column;
+                gap: 20px;
+                .title{
+                   color: #311F09;
+                   font-family: 'Poppins-SemiBold';
+                   font-size: 1.5625rem;
+                   padding-bottom: 10px;
+                }
+                .item{
+                    display: flex;
+                    align-items: center;
+                    gap: 20px;
+                    span{
+                        color: #5C4529;
+                        font-size: 1.25rem;
+                        font-family: "Poppins-Regular";
+                    }
+                }
+            }
+            .btnSetting{
+                display: flex;
+                flex-direction: column;
+                gap: 20px;
+                .modify{
+                    display: flex;
+                    gap: 25px;
+                    align-items: center;
+                    padding: 29px 60px;
+                    background-color: #CCE3FF;
+                    border-radius: 20px;
+                    transition: all .4s ease;
+                    span{
+                        color: #123968;
+                        font-size: 1.25rem;
+                        font-family: "Poppins-Regular";
+                    }
+                    &:hover{
+                        box-shadow: 0px 0px 15px #69adff;
+                        cursor: pointer;
+                        transition: all .4s ease;
+                    }
+                }
+                .close{
+                    display: flex;
+                    gap: 25px;
+                    align-items: center;
+                    padding: 29px 60px;
+                    background-color: #FFE6E6;
+                    border-radius: 20px;
+                    transition: all .4s ease;
+                    span{
+                        color: #EA1010;
+                        font-size: 1.25rem;
+                        font-family: "Poppins-Regular";
+                    }
+                    &:hover{
+                        box-shadow: 0px 0px 15px #ff7777;
+                        cursor: pointer;
+                        transition: all .4s ease;
+                    }
+                }
+            }
+        }
+        .canselend{
+            display: flex;
+            justify-content: end;
+            span{
+                background-color: #FF3838;
+                font-family: 'Poppins-SemiBold';
+                font-size: 1.5625rem;
+                color: #fff;
+                padding: 36px 108px;
+                border-radius: 20px;
+                transition: all .4s ease;
+                width: max-content;
+                margin: 0px 60px;
+                &:hover{
+                    box-shadow: 0px 0px 15px #ff4848;
+                    cursor: pointer;
+                    transition: all .4s ease;
                 }
             }
         }
